# Projectcourse5

./: .gitignore  database.ini  main.py  pyproject.toml
src/: config.py  get_vacancy.py
